--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 22 22:27:40 EET 2022
-sdk.dir=C\:\\Users\\Sebastian\\AppData\\Local\\Android\\Sdk
+#Tue Nov 22 23:22:48 PST 2022
+sdk.dir=C\:\\Users\\Clever Core\\AppData\\Local\\Android\\Sdk
