--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -16,17 +16,9 @@ apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 
 android {
-
-    packagingOptions {
-        jniLibs {
-            pickFirsts += ['**/*.so']
-        }
-    }
-    namespace = 'org.firstinspires.ftc.teamcode'
-    androidResources {
-        noCompress 'tflite'
-    }
+    namespace 'com.example.namespace'
 }
+
 
 dependencies {
     implementation project(':FtcRobotController')
@@ -35,4 +27,6 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
 
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+    implementation 'org.openftc:apriltag:1.1.0'
+    implementation 'org.openftc:easyopencv:1.5.2'
 }
