--- a/build.common.gradle
+++ b/build.common.gradle
@@ -94,7 +94,7 @@ android {
             signingConfig signingConfigs.release
 
             ndk {
-                abiFilters "armeabi-v7a", "arm64-v8a"
+                abiFilters "armeabi-v7a"
             }
 
             if (useProguard) {
@@ -108,7 +108,7 @@ android {
             debuggable true
             jniDebuggable true
             ndk {
-                abiFilters "armeabi-v7a", "arm64-v8a"
+                abiFilters "armeabi-v7a"
             }
 
             if (useProguard) {
