--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Nov 22 23:22:48 PST 2022
-sdk.dir=C\:\\Users\\Clever Core\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Sebastian\\AppData\\Local\\Android\\Sdk
